# frag

./: .gitignore  README  README-leveleg  README.md  frag.cabal  leveleg.bsp  leveleg.cfg  leveleg.med  stack.yaml
src/: AFRP.hs  AFRPAffineSpace.hs  AFRPDiagnostics.hs  AFRPEvent.hs  AFRPForceable.hs  AFRPGeometry.hs  AFRPInternals.hs  AFRPMiscellany.hs  AFRPPoint2.hs  AFRPPoint3.hs  AFRPTask.hs  AFRPUtilities.hs  AFRPVector2.hs  AFRPVector3.hs  AFRPVectorSpace.hs  BSP.hs  BitSet.hs  Camera.hs  Collision.hs  Command.hs  Curves.hs  Diagnostics.hs  Frustum.hs  Game.hs  HGL.hs  IdentityList.hs  MD3.hs  Main.hs  MapCfg.hs  Matrix.hs  Object.hs  ObjectBehavior.hs  Parser.hs  PhysicalDimensions.hs  Quaternion.hs  Raybox.hs  ReadImage.hs  Render.hs  RenderObject.hs  TGA.hs  (+3 more)
tga/: 0.tga  1.tga  2.tga  3.tga  4.tga  5.tga  6.tga  7.tga  8.tga  9.tga  crosshaira.tga  font.tga  hyphen.tga
tga/models/players/klesk/: animation.cfg  h_red.tga  head.md3  head_default.skin  l_red.tga  lower.md3  lower_default.skin  u_red.tga  upper.md3  upper_default.skin
tga/models/weapons/: railgun.shader
tga/textures/base_support/: flat1_1.tga
tga/textures/common/: clip.tga  trigger.tga
tga/textures/e7/: e7bmtrim.tga  e7brickfloor01.tga  e7bricks01.tga  e7panelwood.tga  e7panelwood2.tga  e7sbrickfloor.tga  e7swindow.tga
tga/textures/evil8_floor/: e8cretefloor01b.tga
tga/textures/gothic_block/: blocks11b.tga  blocks15_blue.tga  blocks18b.tga  blocks18d.tga  killblock.tga  killblock_j2.tga
tga/textures/gothic_floor/: largerblock3b3.tga  largerblock3b3dim.tga  q1metal7_99.tga
tga/textures/gothic_light/: ironcrosslt2_10000.tga
tga/textures/gothic_trim/: border7.tga  km_arena1tower4.tga  metalsupport4i_bit.tga  pitted_rust3.tga  wood2.tga
tga/textures/gothic_wall/: oct20c.tga  proto_brik.tga  slateroofc.tga
tga/textures/skies/: nitesky.tga
tga/textures/skin/: pjwal2k.tga
tga/textures/stone/: pjrock6.tga
tga/tga/models/weapons/: railgun.tga  railgun2.tga  railgun3.tga  railgun4.tga
