Name:                frag
Version:             1.1.2
License:             GPL
License-file:        LICENSE
Synopsis:            A 3-D First Person Shooter Game
Description:         A fast and basic reimplementation of the Quake III Arena engine
                     in Haskell; supports many Quake III Arena maps.
Category:            Game
Author:              Mun Hon Cheong
Maintainer:          dons@galois.com
Homepage:            http://haskell.org/haskellwiki/Frag
Build-Type:          Simple
Cabal-Version:       >= 1.2
Tested-with:         GHC==6.8.2
data-files:          README,
     README-leveleg
     -- Graphics files
     leveleg.bsp,
     leveleg.cfg,
     leveleg.med
     tga/models/players/klesk/lower_default.skin,
     tga/models/players/klesk/lower.md3
     tga/models/players/klesk/head_default.skin,
     tga/models/players/klesk/l_red.tga
     tga/models/players/klesk/h_red.tga,
     tga/models/players/klesk/animation.cfg
     tga/models/players/klesk/head.md3,
     tga/models/players/klesk/u_red.tga
     tga/models/players/klesk/upper_default.skin,
     tga/models/players/klesk/upper.md3
     tga/models/weapons/railgun.shader,
     tga/models/weapons/railgun.md3
     tga/font.tga,
     tga/7.tga,
     tga/3.tga,
     tga/4.tga,
     tga/5.tga,
     tga/2.tga
     tga/crosshaira.tga,
     tga/0.tga,
     tga/hyphen.tga,
     tga/9.tga,
     tga/1.tga,
     tga/6.tga
     tga/tga/models/weapons/railgun4.tga,
     tga/tga/models/weapons/railgun2.tga
     tga/tga/models/weapons/railgun.tga,
     tga/tga/models/weapons/railgun3.tga
     tga/8.tga,
     tga/textures/gothic_floor/q1metal7_99.tga
     tga/textures/gothic_floor/largerblock3b3.tga,
     tga/textures/gothic_floor/largerblock3b3dim.tga
     tga/textures/e7/e7brickfloor01.tga, 
     tga/textures/e7/e7bmtrim.tga
     tga/textures/e7/e7bricks01.tga,
     tga/textures/e7/e7sbrickfloor.tga
     tga/textures/e7/e7panelwood.tga,
     tga/textures/e7/e7swindow.tga
     tga/textures/e7/e7panelwood2.tga,
     tga/textures/organics/dirt2.tga
     tga/textures/common/trigger.tga,
     tga/textures/common/clip.tga
     tga/textures/skies/nitesky.tga,
     tga/textures/gothic_trim/border7.tga
     tga/textures/gothic_trim/pitted_rust3.tga,
     tga/textures/gothic_trim/km_arena1tower4.tga
     tga/textures/gothic_trim/wood2.tga,
     tga/textures/gothic_trim/metalsupport4i_bit.tga
     tga/textures/gothic_light/ironcrosslt2_10000.tga,
     tga/textures/stone/pjrock6.tga
     tga/textures/base_support/flat1_1.tga,
     tga/textures/skin/pjwal2k.tga
     tga/textures/gothic_wall/slateroofc.tga,
     tga/textures/gothic_wall/proto_brik.tga
     tga/textures/gothic_wall/oct20c.tga,
     tga/textures/evil8_floor/e8cretefloor01b.tga
     tga/textures/gothic_block/killblock.tga,
     tga/textures/gothic_block/killblock_j2.tga
     tga/textures/gothic_block/blocks15_blue.tga,
     tga/textures/gothic_block/blocks11b.tga
     tga/textures/gothic_block/blocks18d.tga,
     tga/textures/gothic_block/blocks18b.tga

Executable frag
   Main-is:             Main.hs
   Build-Depends:       base==4.*, GLUT, OpenGL>=2.0, array, deepseq, hashtables, random
   Hs-source-dirs:      src
   Ghc-options:         -O2 -funbox-strict-fields -fvia-C -optc-O2
   Extensions:          BangPatterns,
                        FunctionalDependencies,
                        FlexibleInstances,
                        MultiParamTypeClasses,
                        TypeOperators,
                        Rank2Types
